--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,278 @@
-.App {
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+@font-face {
+  font-family: thin-italic;
+  src: url(/public/Fonts/Inter-Thin.ttf);
+}
+@font-face {
+  font-family: inter;
+  src: url(/public/Fonts/Inter-Regular.ttf);
+}
+.main_container{
+background-image: url(/public/images/LandingPage-Background.png);
+ width: 100%;
+ height: 100vh;
+}
+.main_container7{
+  background-image: url(/public/images/LandingPage-Background.png);
+ width: 100%;
+ height: 100vh;
+}
+.main_container5{
+  background-image: url(/public/images/LandingPage-Background.png);
+ width: 100%;
+ height: 100vh;
+}
+.main_container4{
+  background-image: url(/public/images/LandingPage-Background.png);
+  width: 100%;
+  height: 100vh;
+}
+.main_container2{
+  background-image: url(/public/images/LandingPage-Background.png);
+  width: 100%;
+  height: 100vh;
+}
+.main_container11{
+  background-image: url(/public/images/LandingPage-Background.png);
+  width: 100%;
+  height: 100vh;
+}
+.logo{
+  height: 70px;
+}
+.left_off{
+  border-top: 4px solid #fff;
+  border-bottom: 4px solid #fff;
+  color: #fff;
+  font-size: 50px;
+  padding-right: 20px;
+}
+.trans{
+  color: #fff;
+  border-top: 4px solid #fff;
+  border-bottom: 4px solid #fff;
+  font-size: 30px;
+  font-family: thin-italic;
+}
+.services{
+  color: #fff;
+  font-size: 36px;
+ padding-left: 35px;
+ padding-right: 35px;
+}
+.services:hover{
+  color: #E21B3F;
+  cursor: pointer;
+}
+.gallery{
+  color: #fff;
+  font-size: 36px;
+}
+.gallery:hover{
+  color: #E21B3F;
+}
+.d_flex{
+  display: flex;
+}
+.section{
+  display: flex;
+  padding-top: 130px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+align-items: center;  
+}
+.child2{
+  color: #fff;
+  font-size: 50px;
+  border: 1px solid #D9D9D9;
+  padding-bottom: 30px;
+}
+.child2:hover{
+  border: 1px solid #E21B3F;
+}
+.child2 img {
+  position: absolute;
+}
+.title2{
+  font-size: 60px;
+  color: #fff;
+  font-family: thin-italic;
+}
+.child3{
+  color: #fff;
+  font-size: 25px;
+  padding-left: 10px;
+  width: 50%;
+  border: 1px solid #D9D9D9;
+  padding-bottom: 30px;
+}
+.child3:hover{
+ width: 51%;
+ color: #E21B3F;
+ cursor: pointer;
+}
+.child4 img {
+  position: absolute;
+}
+.cards_Section{
+  display: flex;
+justify-content: space-evenly;
+}
+.card{
+  background-color: #D9D9D9;
+  width: 250px;
+  height: 200px;
+  border-radius: 43px !important;
+  margin-left: 20px;
+  margin-right: 20px;
+  opacity: 0.4;
+  
+}
+.card:hover{
+  width: 252px;
+  border:3px solid #E21B3F;
+}
+.section2{
+  display: flex;
+  justify-content: space-evenly;
+align-items: center;
+padding-top: 20px;
+}
+.section_gallery{
+  display: flex;
+  padding-top: 80px;
+  justify-content: space-evenly;
+align-items: center; 
+}
+.section5{
+ margin-left: auto;
+ margin-right: auto;
+ width: 100%;
+  padding-top: 140px;
+}
+.title_1{
+  color: #D9D9D9;
+  font-family: thin-italic;
+  font-size: 40px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title_2{
+  color: #D9D9D9;
+  font-family: thin-italic;
+  font-size: 40px;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title_3{
+margin-top: 40px;
+color: #fff;
+font-family: thin-italic;
+font-size: 30px;
+width: 173px;
+margin-left: auto;
+margin-right: auto;
+border-top: 3px solid #fff;
+border-bottom: 3px solid #fff;
 }
+.title_2 img  {
+  position: absolute;
+  margin-top: 60px;
+}
+.field_css{
+background-color: #A99898;
+padding-left: 10px;
+border: none !important;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+color: #fff;
+height: 40px;
+}
+.email_field{
+  width: 100%;
+}
+.field_css::placeholder {
+  color: #fff;
+}
+.fix_W{
+  width: 160px;
+  border-bottom: 3px solid #fff !important;
+  border-top: 3px solid #fff !important; 
+}
+.fix_W:hover {
+  border-bottom: 3px solid #E21B3F !important;
+  border-top: 3px solid #E21B3F !important; 
+}
+.data_form{
+background-image: url(/public/images/Frame\ 11.png);
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.div_1{
   display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 60px;
+}
+.contact{
+  display: none;
+}
+@media (max-width: 768px) {
+  .cards_Section{
+    flex-direction: column;
+  }
+  .text_align{
+    font-size: 20px;
+  }
+ .section2{
+padding-top: 0;
+ }
+ .card{
+  margin-bottom: 15px;
+ }
+
+ .title_1 {
+  padding-bottom: 60px;
+ }
+ .title_2{
+  padding-bottom: 110px;
+ }
+ .data_form{
+  width: 90%;
+ }
+ .d_flex{
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ }
+ .services{
+padding-left: 0;
+padding-bottom: 15px;
+padding-top: 15px;
+ }
+ .section{
+  flex-direction: column;
+  padding-top: 60px;
+ }
+ .child1{
+  padding-bottom: 20px;
+ }
+ .section5{
+  padding-top: 80px;
+ }
+.main_container11{
+  height:auto ;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
