--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -94,14 +94,20 @@ align-items: center;
     flex-direction: column;
     left: 0;
     width: 100%;
-    height: 280px;
+    height: 204px;
     transform: translateX(-100%);
     transition: all 0.45s;
   }
   .Navbar {
     margin-top: 0;
+    padding-left: 30px !important;
   }
-
+  .services{
+font-size: 25px;
+  }
+.gallery{
+  font-size: 25px;
+}
   .Navbar > .nav-items > a::before {
     background: transparent;
   }
@@ -111,6 +117,8 @@ align-items: center;
     background-color: #160707;
     background-size: cover;
     background-repeat: no-repeat;
+    align-items: start;
+    padding-left: 30px;
   }
 
   .Navbar > .nav-toggle {
@@ -180,6 +188,10 @@ margin-bottom: 30px;
     .logo{
       height: 38px;
     }
+    .left_off{
+      font-size: 25px;
+      margin-top: 20px;
+    }
     .Navbar{
       padding-left: 49px;
     padding-right: 19px;
@@ -224,6 +236,7 @@ padding-top: 47px;
       font-size: 26px;
       padding-top: 20px;
       padding-left: 10px;
+      font-family: exo-md;
       padding-right: 10px;
      }
      .child2 img {
