--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -225,6 +225,7 @@ padding-top: 47px;
      }
      .text_align{
       font-size: 14px;
+      font-family: exo-md;
      }
      .section{
       padding-bottom: 300px;
